--- a/CustomerMS.properties
+++ b/CustomerMS.properties
@@ -1,3 +1,6 @@
-friend.uri http://localhost:8300/customers/
 path.uri=http://localhost:8400/path/
 spring.datasource.url-jdbc:mysql://localhost/infytel-customer
+friend.uri=http://localhost:8300/customers/
+plan.uri=http://localhost:8400/plans/
+spring.jackson.default-property-inclusion: NON_NULL
+spring.config.import=optional:configserver:http://localhost:1111
