--- a/FriendFamilyMS.properties
+++ b/FriendFamilyMS.properties
@@ -1,1 +1,1 @@
-spring.config.import=optional:configserver:http://localhost:1111
+spring.datasource.url = jdbc:mysql://localhost:3306/infytel_friend_family
