--- a/CustomerMS.properties
+++ b/CustomerMS.properties
@@ -1,4 +1,4 @@
 path.uri=http://localhost:8400/path/
-spring.datasource.url-jdbc:mysql://localhost/infytel_customer
+spring.datasource.url=jdbc:mysql://localhost/infytel_customer
 friend.uri=http://localhost:8300/customers/
 plan.uri=http://localhost:8400/plans/
